[tool.poetry]
name = "incolumepy.flaskproject"
version = "1.0.5"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/flaskproject', from=''},
]

license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["flask", "python", "web"]
classifiers = [
  "License :: Free For Educational Use",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Education",
  "Topic :: Education:: Testing",
  "Topic :: Utilities"
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]
python = "3.9.6"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"
Flask-WTF = "^0.15.1"
WTForms = {extras = ["email"], version = "^2.3.3"}
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
